--- a/src/Documentation.css
+++ b/src/Documentation.css
@@ -73,3 +73,16 @@
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+
+/* Documentation.css */
+body {
+  overflow-x: hidden;
+}
+
+#root {
+  overflow-x: hidden;
+}
+
+.Box-root {
+  overflow-x: hidden;
+}
